--- a/Assets/Scripts/UI/UIShop.uxml
+++ b/Assets/Scripts/UI/UIShop.uxml
@@ -1,27 +1,110 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/shop.uss?fileID=7433441132597879392&amp;guid=6033f10bbd25d814b9ec78ab79191070&amp;type=3#shop" />
+    <ui:Template name="TemplateRare" src="project://database/Assets/Scripts/UI/ItemTemplates/TemplateRare.uxml?fileID=9197481963319205126&amp;guid=fcb5a5e7b65637a4fbd2318150b53236&amp;type=3#TemplateRare" />
+    <Style src="project://database/Assets/shop.uss?fileID=7433441132597879392&amp;guid=6033f10bbd25d814b9ec78ab79191070&amp;type=3" />
     <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.78); flex-direction: column; justify-content: center;">
-        <ui:VisualElement style="flex-grow: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; width: 1536px; height: 864px; justify-content: space-between; align-self: center; align-items: stretch; flex-direction: row;">
+        <ui:VisualElement name="VisualElement" style="flex-grow: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; width: 1536px; height: 864px; justify-content: space-between; align-self: center; align-items: stretch; flex-direction: row; background-image: url(&quot;project://database/Assets/Sprites/UI/shop.aseprite?fileID=-860619460986185638&amp;guid=c0b7d0072dbd267419ae94ee6474c472&amp;type=3#shop&quot;);">
             <ui:VisualElement name="VisualElement" style="flex-grow: 1;">
                 <ui:VisualElement name="VisualElement" style="flex-grow: 1;">
-                    <ui:VisualElement name="shopTitle" style="flex-grow: 1;" />
-                    <ui:VisualElement name="itemContainer" style="flex-grow: 0; background-color: rgba(61, 101, 88, 0.31); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; padding-top: 40px; padding-right: 40px; padding-bottom: 40px; padding-left: 40px; flex-direction: row; justify-content: space-around; align-self: stretch; align-items: auto;">
-                        <ui:VisualElement style="flex-grow: 1; background-color: rgba(255, 255, 255, 0); width: 300px; min-width: 65px; max-width: 300px; margin-top: 15px; margin-right: 15px; margin-bottom: 15px; margin-left: 15px; height: 600px; background-image: url(&quot;project://database/Assets/Sprites/commonItem.aseprite?fileID=-1311724737302225371&amp;guid=8c48af6ce38be554d929d1b94bdaab28&amp;type=3#commonItem&quot;);" />
-                        <ui:VisualElement style="flex-grow: 1; background-color: rgb(255, 255, 255); width: 84px; min-width: 65px; max-width: 300px; margin-top: 15px; margin-right: 15px; margin-bottom: 15px; margin-left: 15px; height: 600px;" />
-                        <ui:VisualElement style="flex-grow: 1; background-color: rgb(255, 255, 255); width: 300px; min-width: 300px; max-width: 300px; margin-top: 15px; margin-right: 15px; margin-bottom: 15px; margin-left: 15px; height: 600px;" />
+                    <ui:VisualElement name="shopTitle" style="flex-grow: 1; flex-direction: row; padding-left: 110px; padding-right: 110px; padding-top: 35px;">
+                        <ui:VisualElement style="flex-grow: 1; justify-content: center; align-self: center; flex-direction: row;">
+                            <ui:Button text="Reroll:" name="rerollButton" class="button" style="padding-top: 20px; padding-bottom: 20px; -unity-text-align: middle-left;">
+                                <ui:Label text="50 $" name="rerollPrice" style="-unity-text-align: middle-right; color: rgb(195, 158, 38);" />
+                            </ui:Button>
+                        </ui:VisualElement>
+                        <ui:VisualElement style="flex-grow: 0; margin-left: 0; margin-right: 0; justify-content: center; align-self: center; align-items: flex-start; flex-direction: row; width: 50%;">
+                            <ui:Label text="- Item Shop -" style="-unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 40px; -unity-text-align: upper-center; color: rgb(235, 235, 235); text-shadow: 3px 3px 0 rgb(0, 0, 0);" />
+                        </ui:VisualElement>
+                        <ui:VisualElement style="flex-grow: 1; justify-content: space-around; align-self: center; flex-direction: row;">
+                            <ui:Button text="Next Wave -&gt;" name="nextWave" class="button" style="padding-top: 20px; padding-bottom: 20px;" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                    <ui:VisualElement name="itemContainer" style="flex-grow: 0; background-color: rgba(61, 101, 88, 0); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; padding-top: 1px; padding-right: 40px; padding-bottom: 0; padding-left: 40px; flex-direction: row; justify-content: space-around; align-self: stretch; align-items: auto;">
+                        <ui:Instance template="TemplateRare" />
+                        <ui:Instance template="TemplateRare" />
+                        <ui:Instance template="TemplateRare" />
                     </ui:VisualElement>
                 </ui:VisualElement>
                 <ui:VisualElement style="flex-grow: 0;">
-                    <ui:VisualElement style="flex-grow: 0; flex-direction: row; justify-content: space-between; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px;">
-                        <ui:Button text="Button" name="rerollButton" style="font-size: 29px;" />
-                        <ui:Label text="MONEY LABEL" name="moneyLabel" style="color: rgb(255, 255, 255); font-size: 30px; background-color: rgba(249, 255, 71, 0.58); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; -unity-text-align: middle-center; -unity-font-style: normal;" />
-                        <ui:VisualElement style="flex-grow: 0; align-self: auto; justify-content: flex-end; background-color: rgba(0, 0, 0, 0); max-width: 5%;">
-                            <ui:Button name="nextWave" text="next" style="top: auto; right: 0; bottom: 0; flex-direction: column; flex-wrap: nowrap; align-self: flex-end;" />
-                        </ui:VisualElement>
+                    <ui:VisualElement style="flex-grow: 0; flex-direction: row; justify-content: space-between; padding-top: -2px; padding-right: 10px; padding-bottom: 20px; padding-left: 10px; align-items: center; align-self: center;">
+                        <ui:Label text="MONEY LABEL" name="moneyLabel" style="color: rgb(195, 158, 38); font-size: 35px; background-color: rgba(249, 255, 71, 0); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; -unity-text-align: middle-center; -unity-font-style: normal; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); text-shadow: 2px 2px 0 rgb(0, 0, 0);" />
                     </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 0; width: 30%;" />
+            <ui:VisualElement style="flex-grow: 0; width: 30%; padding-top: 60px; padding-right: 60px; padding-bottom: 60px; padding-left: 72px;">
+                <ui:VisualElement name="Stats" style="flex-grow: 0;">
+                    <ui:Label text="Stats:" style="font-size: 44px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); padding-top: 17px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; -unity-text-align: upper-center; color: rgb(235, 235, 235); text-shadow: 3px 3px 0 rgb(0, 0, 0);" />
+                </ui:VisualElement>
+                <ui:VisualElement name="Combat" style="flex-grow: 0;">
+                    <ui:Label text="Combat:" triple-click-selects-line="false" class="stat-category" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Max Health:" class="stat-name" />
+                    <ui:Label text="0.23" name="labelMaxHealth" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="(Max Health %: " enable-rich-text="true" class="stat-name" />
+                    <ui:Label text="123" name="labelMaxHealthP" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Attack Damage:" class="stat-name" />
+                    <ui:Label text="456" name="labelAttackDamage" class="stat-value" style="height: 25px;" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="(Attack Damage %:" class="stat-name" />
+                    <ui:Label text="789" name="labelAttackDamageP" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Attack Speed:" class="stat-name" />
+                    <ui:Label text="Label" name="labelAttackSpeed" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="(Attack Speed %:" class="stat-name" />
+                    <ui:Label text="012" name="labelAttackSpeedP" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Bullet Speed:" class="stat-name" />
+                    <ui:Label text="Label" name="labelBulletSpeed" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Bullet Distance: " class="stat-name" />
+                    <ui:Label text="Label" name="labelBulletDistance" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Bullet Spread: " class="stat-name" />
+                    <ui:Label text="Label" name="labelBulletSpread" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Defense: " class="stat-name" />
+                    <ui:Label text="Label" name="labelDefense" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="Movement" style="flex-grow: 0;">
+                    <ui:Label text="Movement:" class="stat-category" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Movement Speed: " class="stat-name" />
+                    <ui:Label text="Label" name="labelMoveSpeed" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="(Movement Speed %: " class="stat-name" />
+                    <ui:Label text="Label" name="labelMoveSpeedP" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Dash Distance:" class="stat-name" />
+                    <ui:Label text="Label" name="labelDashDistance" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Dash Cooldown (per Dash):" class="stat-name" />
+                    <ui:Label text="Label" name="labelDashCooldown" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="(Dash Cooldown %:" class="stat-name" />
+                    <ui:Label text="Label" name="labelDashCooldownP" class="stat-value" />
+                </ui:VisualElement>
+                <ui:VisualElement name="VisualElement" class="stat-container" style="flex-grow: 0; flex-direction: row; justify-content: space-between; align-self: stretch; align-content: auto;">
+                    <ui:Label text="Dashes:" class="stat-name" />
+                    <ui:Label text="Label" name="labelDashes" class="stat-value" />
+                </ui:VisualElement>
+            </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
