--- a/Assets/shop.uss
+++ b/Assets/shop.uss
@@ -54,3 +54,42 @@
     -unity-font-style: bold;
     -unity-text-align: upper-center;
 }
+
+.stat-value {
+    font-size: 20px;
+    -unity-font-definition: url("project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&guid=21bdbdc904a27364ab64e421957f4e3a&type=3#alagard");
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 0 rgb(0, 0, 0);
+}
+
+.stat-name {
+    font-size: 20px;
+    -unity-font-definition: url("project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&guid=21bdbdc904a27364ab64e421957f4e3a&type=3#alagard");
+    color: rgb(245, 245, 246);
+    text-shadow: 2px 2px 0 rgb(0, 0, 0);
+}
+
+.stat-category {
+    -unity-font-definition: url("project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&guid=21bdbdc904a27364ab64e421957f4e3a&type=3#alagard");
+    font-size: 35px;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 0 rgb(0, 0, 0);
+}
+
+.button {
+    -unity-font-definition: url("project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&guid=21bdbdc904a27364ab64e421957f4e3a&type=3#alagard");
+    font-size: 25px;
+    width: 200px;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0);
+    border-left-color: rgba(0, 0, 0, 0);
+    border-right-color: rgba(0, 0, 0, 0);
+    border-top-color: rgba(0, 0, 0, 0);
+    border-bottom-color: rgba(0, 0, 0, 0);
+    min-width: 200px;
+    max-width: 200px;
+    min-height: 60px;
+    max-height: 60px;
+    color: rgb(235, 235, 235);
+    text-shadow: 2px 2px 0 rgb(0, 0, 0);
+}
