--- a/Assets/Scripts/UI/UIPause.uxml
+++ b/Assets/Scripts/UI/UIPause.uxml
@@ -1,7 +1,30 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 1; padding-top: 220px; padding-right: 220px; padding-bottom: 220px; padding-left: 220px; align-items: center; justify-content: center; align-self: stretch;">
-        <ui:Button text="continue" name="buttonContinue" style="width: 150px;" />
-        <ui:Button text="new game" name="buttonNewGame" style="width: 150px;" />
-        <ui:Button text="exit" name="buttonExit" style="width: 150px;" />
+    <ui:Template name="statsTemplate" src="project://database/Assets/Scripts/UI/OtherTemplates/statsTemplate.uxml?fileID=9197481963319205126&amp;guid=2d5c98438de9e7b408fdd0b3f23a615d&amp;type=3#statsTemplate" />
+    <Style src="project://database/Assets/pauseIO.uss?fileID=7433441132597879392&amp;guid=769dd3eff8f810944b37e47de8b2a54f&amp;type=3#pauseIO" />
+    <ui:VisualElement style="flex-grow: 1; padding-top: 220px; padding-right: 220px; padding-bottom: 220px; padding-left: 220px; align-items: center; justify-content: center; align-self: stretch; flex-direction: row; background-color: rgba(0, 0, 0, 0.27);">
+        <ui:VisualElement template="statsTemplate">
+            <ui:VisualElement style="flex-grow: 0; width: 460px; padding-top: 60px; padding-right: 60px; padding-bottom: 60px; padding-left: 72px; height: 864px; min-height: 864px; max-height: 864px; min-width: 460px; max-width: 460px; background-image: none;" />
+        </ui:VisualElement>
+        <ui:VisualElement template="statsTemplate" style="padding-left: 0; padding-right: 150px; align-self: center; margin-right: 150px; margin-left: 150px;">
+            <Style src="project://database/Assets/statsTemplateCSS.uss?fileID=7433441132597879392&amp;guid=00963d98fe69714468bbfb0a93517fb9&amp;type=3#statsTemplateCSS" />
+            <ui:VisualElement style="flex-grow: 0; width: 460px; padding-top: 60px; padding-right: 60px; padding-bottom: 60px; padding-left: 72px; height: 864px; min-height: 864px; max-height: 864px; min-width: 460px; max-width: 460px; background-image: url(&quot;project://database/Assets/Sprites/UI/stats-background.aseprite?fileID=9094009715373455264&amp;guid=0fefc7275a8c3f741896f6c980a99cfa&amp;type=3#stats-background&quot;);">
+                <ui:VisualElement name="Stats" style="flex-grow: 0;">
+                    <ui:Label text="Paused" style="font-size: 44px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); padding-top: 17px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; -unity-text-align: upper-center; color: rgb(235, 235, 235);" />
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 0; height: 95px;" />
+                <ui:VisualElement style="flex-grow: 0; justify-content: center; align-self: center; align-items: center;">
+                    <ui:VisualElement style="flex-grow: 0; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; align-self: center;">
+                        <ui:Button text="Continue" name="buttonContinue" class="button" style="width: 384px; height: 96px; min-width: 384px; max-width: 384px; min-height: 96px; max-height: 96px; background-image: url(&quot;project://database/Assets/Sprites/UI/buttonPrefab.aseprite?fileID=1782798293583943734&amp;guid=6809ba3236bdbd142b573f4c0ecaa0bf&amp;type=3#buttonPrefab&quot;); background-color: rgba(0, 0, 0, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0); background-size: 80% 80%; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); font-size: 40px; color: rgb(235, 235, 235); text-shadow: 1px 1px 0 rgb(208, 155, 255); transition-property: all; transition-duration: 0s; transition-timing-function: ease; transition-delay: 0s;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement style="flex-grow: 0; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; align-self: center;">
+                        <ui:Button text="New Game" name="buttonNewGame" class="button" style="width: 384px; height: 96px; min-width: 384px; max-width: 384px; min-height: 96px; max-height: 96px; background-image: url(&quot;project://database/Assets/Sprites/UI/buttonPrefab.aseprite?fileID=1782798293583943734&amp;guid=6809ba3236bdbd142b573f4c0ecaa0bf&amp;type=3#buttonPrefab&quot;); background-color: rgba(0, 0, 0, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0); background-size: 80% 80%; font-size: 40px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); color: rgb(235, 235, 235); text-shadow: 1px 1px 0 rgb(208, 155, 255);" />
+                    </ui:VisualElement>
+                    <ui:VisualElement style="flex-grow: 0; padding-top: 15px; padding-right: 15px; padding-bottom: 15px; padding-left: 15px; align-self: center;">
+                        <ui:Button text="Exit" name="buttonExit" class="button" style="width: 384px; height: 96px; min-width: 384px; max-width: 384px; min-height: 96px; max-height: 96px; background-image: url(&quot;project://database/Assets/Sprites/UI/buttonPrefab.aseprite?fileID=1782798293583943734&amp;guid=6809ba3236bdbd142b573f4c0ecaa0bf&amp;type=3#buttonPrefab&quot;); background-color: rgba(0, 0, 0, 0); border-left-color: rgba(149, 149, 149, 0); border-right-color: rgba(149, 149, 149, 0); border-top-color: rgba(149, 149, 149, 0); border-bottom-color: rgba(149, 149, 149, 0); background-size: 80% 80%; font-size: 40px; -unity-font-definition: url(&quot;project://database/Assets/Downloaded/Fonts/alagard.ttf?fileID=12800000&amp;guid=21bdbdc904a27364ab64e421957f4e3a&amp;type=3#alagard&quot;); text-shadow: 1px 1px 0 rgb(208, 155, 255); color: rgb(235, 235, 235);" />
+                    </ui:VisualElement>
+                </ui:VisualElement>
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:Instance template="statsTemplate" />
     </ui:VisualElement>
 </ui:UXML>
